# grad-descent-visualizer

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  example.py  examples.py  main.py  pyproject.toml  requirements.txt
grad-descent-visualizer/: descent.py  plotting.py  test_functions.py
grad_descent_visualizer/: __init__.py  descent.py  plotting.py  test_functions.py
tests/: test_test_functions.py
